# iocisofifa

./: Cargo.toml  LICENSE  country_codes.xlsx
src/: country.rs  dep_isocountry.rs  dep_str.rs  fifa.rs  fifa_name.rs  interface.rs  ioc.rs  ioc_name.rs  iso_alpha2.rs  iso_alpha3.rs  iso_name.rs  lib.rs  serde.rs  str.rs  uppercase.rs
