[package]
name = "iocisofifa"
version = "1.0.0"
authors = ["martin.kolarik@smartcontrol.cz"]
description = "IOC, ISO 3166-1, and FIFA country codes conversions."
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ioc", "iso3166", "iso-3166", "fifa", "country"]
repository = "https://github.com/martin-kolarik/iocisofifa"
homepage = "https://github.com/martin-kolarik/iocisofifa"


[features]
default = []
serde = ["dep:serde"]
std = ["serde/std"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
